@@ -1,3 +1,6 @@
+Dec 15, 2009 - chris
+o renamed HAM_EMPTY_DATABASE_NAME to HAM_DEFAULT_DATABASE_NAME
+
 Dec 14, 2009 - chris
 o fixed bug in ham_find - if record was empty, but record->size was set 
     by the caller, then the record->size value was not overwritten
